Added home controller action index | Scaffolded Product (name, description, price_in_cents) | Added nav bar like options -application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+
+
+    <%= link_to 'Home Page', home_index_path %> |
+    <%= link_to 'Products', products_path %>
+
     <%= yield %>
   </body>
 </html>
