--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,33 +1,39 @@
-<%= form_with(model: product, local: true) do |form| %>
-  <% if product.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
 
-      <ul>
-      <% product.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= form_for @product, local: true, html: { multipart: true } do |form| %>
+<% if product.errors.any? %>
+<div id="error_explanation">
+  <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, id: :product_name %>
-  </div>
+  <ul>
+    <% product.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description, id: :product_description %>
-  </div>
+<div class="field">
+  <%= form.label :image %>
+  <%= form.file_field :image %>
+</div>
 
-  <div class="field">
-    <%= form.label :price_in_cents %>
-    <%= form.number_field :price_in_cents, id: :product_price_in_cents %>
-  </div>
+<div class="field">
+  <%= form.label :name %>
+  <%= form.text_field :name, id: :product_name %>
+</div>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-  
+<div class="field">
+  <%= form.label :description %>
+  <%= form.text_area :description, id: :product_description %>
+</div>
+
+<div class="field">
+  <%= form.label :price_in_cents %>
+  <%= form.number_field :price_in_cents, id: :product_price_in_cents %>
+</div>
+
+<div class="actions">
+  <%= form.submit %>
+</div>
+
 <% end %>
