--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,6 +17,7 @@
       <tr>
         <td><%= product.name %></td>
         <td><%= product.description %></td>
+        <td><%= image_tag product.image.url(:thumb) %></td>
         <td><%= product.formatted_price %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
